--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,17 @@
+# first, ignore all
+*
+
+#unignore all with extensions
+!*.*
+
+#unignore all directories
+!*/
+
+#unignore README and Makefiles and .gitignore just in case
+!README
+!Makefile
+!.gitignore
+
 # Prerequisites
 *.d
 
@@ -30,3 +44,7 @@
 *.exe
 *.out
 *.app
+
+#ignore emacs backup files or temp files
+*~
+\#*
