--- a/src/input/Makefile
+++ b/src/input/Makefile
@@ -2,4 +2,4 @@ dbkbd: dbkbd.cc
 	g++ -g -std=c++11 dbkbd.cc -o dbkbd
 	
 windows:
-	g++ -g -std=c++11 -lgdi32 ./windows/wintest.cc -o dbkbd.exe
+	g++ -g -std=c++11 -lgdi32 ./windows/wintest.cc -o dbkbd.exe -mwindows
