OpenGL (glut), pthread, sanitizer

--- a/src/input/Makefile
+++ b/src/input/Makefile
@@ -1,5 +1,5 @@
-dbkbd: dbkbd.cc
-	g++ -g -std=c++11 dbkbd.cc -o dbkbd
+dbkbd: ./linux/ltest.cc
+	g++ -g -std=c++11 -lglut -lGL -pthread -fsanitize=address ./linux/ltest.cc -o dbkbd
 	
-windows:
+windows: ./windows/wintest.cc
 	g++ -g -std=c++11 -lgdi32 ./windows/wintest.cc -o dbkbd.exe -mwindows
