glfw initial commit

--- a/src/input/Makefile
+++ b/src/input/Makefile
@@ -1,5 +1,9 @@
-dbkbd: ./linux/ltest.cc
-	g++ -g -std=c++11 -lglut -lGL -pthread -fsanitize=address ./linux/ltest.cc -o dbkbd
+dbkbd: ./linux/ltest.cc ./linux/glad.o
+	g++ -g -std=c++11 -I./linux/glad/include -lglfw -lGL -lX11 -ldl -pthread -fsanitize=address ./linux/ltest.cc ./linux/glad.o -o dbkbd
+	rm ./linux/glad.o
 	
 windows: ./windows/wintest.cc
 	g++ -g -std=c++11 -lgdi32 ./windows/wintest.cc -o dbkbd.exe -mwindows
+
+glad.o: ./linux/glad/src/glad.c
+	g++ -g -std=c++11 -c -I./linux/glad/include ./linux/glad/src/glad.c -dl -o ./linux/glad.o
