fix linking issues

--- a/src/input/Makefile
+++ b/src/input/Makefile
@@ -1,4 +1,4 @@
-dbkbd: ./linux/ltest.cc ./linux/glad.o
+dbkbd: ./linux/ltest.cc glad.o
 	g++ -g -std=c++11 -I./linux/glad/include -lglfw -lGL -lX11 -ldl -pthread -fsanitize=address ./linux/ltest.cc ./linux/glad.o -o dbkbd
 	rm ./linux/glad.o
 	
@@ -6,4 +6,4 @@ windows: ./windows/wintest.cc
 	g++ -g -std=c++11 -lgdi32 ./windows/wintest.cc -o dbkbd.exe -mwindows
 
 glad.o: ./linux/glad/src/glad.c
-	g++ -g -std=c++11 -c -I./linux/glad/include ./linux/glad/src/glad.c -dl -o ./linux/glad.o
+	g++ -g -std=c++11 -c -I./linux/glad/include ./linux/glad/src/glad.c -o ./linux/glad.o
