move links for compilation under ubuntu

--- a/src/input/Makefile
+++ b/src/input/Makefile
@@ -1,5 +1,5 @@
 dbkbd: ./linux/ltest.cc
-	g++ -g -std=c++11 -lglut -lGL -pthread -fsanitize=address ./linux/ltest.cc -o dbkbd
+	g++ -g -std=c++11 -pthread -fsanitize=address ./linux/ltest.cc -o dbkbd -lglut -lGL 
 	
 windows: ./windows/wintest.cc
 	g++ -g -std=c++11 -lgdi32 ./windows/wintest.cc -o dbkbd.exe -mwindows
