created 2nd demo with triangle using new opengl. Old immediate mode seems no longer available which is too bad because it's so easy

--- a/src/opengl/Makefile
+++ b/src/opengl/Makefile
@@ -1,11 +1,16 @@
-CXX	:= g++ -std=c++11 -I external -I external/glad/include $(DEBUG) $(OPT)
-OBJ	:= main.o GLWin.o glad.o
+CXX	:= g++ -std=c++11 -I external -I external/glm-0.9.7.1 -I external/glad/include $(DEBUG) $(OPT)
+SHARED	:= GLWin.o glad.o
+OBJ	:= main.o $(SHARED)
 LIBS	:= -lglfw -lGL -lX11 -ldl
 
 #	g++ -g -std=c++11  -pthread -fsanitize=address ./linux/ltest.cc ./linux/glad.o -o dbkbd 
 
 testwin: $(OBJ) 
 	$(CXX) $(OBJ) -o testwin $(LIBS)
+
+DEMO1OBJ	:= OldSchoolTriangleDemo.o $(SHARED)
+demo1: $(DEMO1OBJ)
+	$(CXX) $(DEMO1OBJ) -o demo1 $(LIBS)
 
 main.o: main.cc GLWin.hh
 	$(CXX) -c main.cc
