separate player class

--- a/src/input/linux/Makefile
+++ b/src/input/linux/Makefile
@@ -1,12 +1,15 @@
 CXX := g++ -g -std=c++11
 
-asteroids: dbkbd.o asteroids.o glad.o
-	$(CXX) dbkbd.o asteroids.o glad.o -pthread -fsanitize=address -lglfw -lGL -lX11 -ldl -o a.out
+asteroids: dbkbd.o player.o asteroids.o glad.o
+	$(CXX) dbkbd.o player.o asteroids.o glad.o -pthread -fsanitize=address -lglfw -lGL -lX11 -ldl -o a.out
 
 asteroids.o: asteroids.cc
-	$(CXX) -c -I./includes/glad/include -I./includes/glm asteroids.cc -o asteroids.o 	
+	$(CXX) -c -I./includes/glad/include asteroids.cc -o asteroids.o 	
 
-dbkbd.o: ./dbkbd.cc ./dbkbd.hh
+player.o: player.cc player.hh
+	$(CXX) -c -I./includes/glad/include -I./includes/glm player.cc -o player.o 	
+
+dbkbd.o: dbkbd.cc dbkbd.hh
 	$(CXX) -c dbkbd.cc -o dbkbd.o
 
 glad.o: ./includes/glad/src/glad.c
