shader loading class

--- a/src/input/linux/Makefile
+++ b/src/input/linux/Makefile
@@ -1,7 +1,7 @@
 CXX := g++ -g -std=c++11
 
-asteroids: dbkbd.o player.o bullet.o asteroids.o glad.o 
-	$(CXX) dbkbd.o player.o bullet.o asteroids.o glad.o -pthread -lglfw -lGL -lX11 -ldl -o a.out
+asteroids: dbkbd.o player.o bullet.o asteroids.o glad.o shader.o
+	$(CXX) dbkbd.o player.o bullet.o asteroids.o glad.o shader.o -pthread -lglfw -lGL -lX11 -ldl -o a.out
 
 asteroids.o: asteroids.cc
 	$(CXX) -c -I./includes/glad/include asteroids.cc -o asteroids.o 	
@@ -14,6 +14,9 @@ bullet.o: bullet.cc bullet.hh
 
 dbkbd.o: dbkbd.cc dbkbd.hh
 	$(CXX) -c dbkbd.cc -o dbkbd.o
+
+shader.o: shader.cc shader.hh
+	$(CXX) -c -I./includes/glad/include shader.cc -o shader.o
 
 glad.o: ./includes/glad/src/glad.c
 	$(CXX) -c -I./includes/glad/include ./includes/glad/src/glad.c -o glad.o
